k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rsstojson-deployment
  namespace: rsstojson
  labels:
    app: rsstojson
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rsstojson
  template:
    metadata:
      labels:
        app: rsstojson
    spec:
      containers:
        - name: rsstojson
          image: registry.gitlab.com/simonbreiter/rsstojson:<VERSION>
          command: ["npm", "run", "start"]
          ports:
          - containerPort: 3000
            protocol: TCP
