k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rsstojson-ingress
  namespace: rsstojson
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
      - rsstojson.com
  rules:
  - host: rsstojson.com
    http:
      paths:
      - backend:
          serviceName: rsstojson-service
          servicePort: 80
